--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,7 @@ on:
     branches: [ mainline ]
   pull_request:
     branches: [ mainline ]
+  workflow_dispatch:
 
 jobs:
 
@@ -13,10 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Set up Go 1.17
+    - name: Set up Go 1.22
       uses: actions/setup-go@v2
       with:
-        go-version: 1.17
+        go-version: 1.22
       id: go
 
     - name: Install cross-compiler for Windows
@@ -26,7 +27,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: golint
-      run: go get -u golang.org/x/lint/golint
+      run: go install golang.org/x/lint/golint@latest
 
     - name: Build
       run: make build windows-release test
