Lower Go version to 1.20 for plugin
The build system for the kinesis plugin is rather complex - in short, we
pull this code into an AWS AL2 based container where Go is installed,
compile the plugin and then copy it out for inclusion in our own image.
This means that the minimum Go version specified in this code must be
no higher than the Go version available in the AWS AL2 image (which is
currently Go 1.20). Unfortunately this version is no longer receiving
reliability or security updates, but we'll have to deal with this issue
in the future.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,10 +14,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Set up Go 1.22
+    # This cannot be higher than the Go version used to build the plugin for
+    # release (in canva/infrastructure //app/aws-for-fluent-bit/plugin:plugin).
+    # This is currently Go 1.20.
+    - name: Set up Go 1.20
       uses: actions/setup-go@v2
       with:
-        go-version: 1.22
+        go-version: 1.20
       id: go
 
     - name: Install cross-compiler for Windows
