--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,9 @@ jobs:
         go-version: '1.20'
       id: go
 
+    - name: Update apt
+      run: sudo apt-get update
+
     - name: Install cross-compiler for Windows
       run: sudo apt-get install -y gcc-multilib gcc-mingw-w64
 
