--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,11 +14,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Set up Go 1.22
+    # This cannot be higher than the Go version used to build the plugin for
+    # release (in canva/infrastructure //app/aws-for-fluent-bit/plugin:plugin).
+    # This is currently Go 1.20.
+    - name: Set up Go 1.20
       uses: actions/setup-go@v2
       with:
-        go-version: 1.22
+        go-version: '1.20'
       id: go
+
+    - name: Update apt
+      run: sudo apt-get update
 
     - name: Install cross-compiler for Windows
       run: sudo apt-get install -y gcc-multilib gcc-mingw-w64
